[CIRC-1824] Add allowedServicePoints to request policy (#1306)
* CIRC-1824 add allowedServicePoints to request policy

* CIRC-1824 add getter

* CIRC-1824 remove code smell

* CIRC-1824 fix code smell

* CIRC-1824 update test

* CIRC-1824 refactoring

* CIRC-1824 tests refactoring

* CIRC-1824 rename test, add logging

* CIRC-1824 improve logging